# common

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  shell.nix
.github/workflows/: c-cpp.yml
src/: main.cc
src/modules/: cxx_parser.cppm  fileio.cppm  flagparser.cppm  iparser.cppm  parser.cppm
src/modules/parsers/: cxx_parser.cppm  powershell_parser.cppm  python_parser.cpp
test/: negative_test.txt  positive_PY_test.txt  positive_test.txt.com
test/cxx/: negative_test.txt  positive_test.txt
test/powershell/: negative_test.txt  positive_test.txt
test/python/: negative_PY_test.txt
